--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify-icons/mdi": "^1.1.16",
     "@iconify-icons/mdi-light": "^1.1.0",
     "@iconify/react": "^1.1.4",
     "@testing-library/jest-dom": "^5.11.4",
